# intelligent-query-system-

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: engine.py
ui/: app.py
